# mcp-demo

./: pyproject.toml
app/: config.py  main.py
app/routes/: chat.py
app/services/: llm_router.py
