[tool.poetry]
name = "mcp-demo"
version = "0.1.0"
description = ""
authors = ["Ayaz Somani <ayaz.somani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
langchain = "^0.3.23"
openai = "^1.75.0"
pinecone-client = "^6.0.0"
python-dotenv = "^1.1.0"
langchain-community = "^0.3.21"
langchain-openai = "^0.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
